--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,24 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".splash.SplashActivity">
-
-        <ImageView
-            android:id="@+id/splashImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bg"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0" />
 
 
         <ImageView
@@ -34,18 +20,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.21" />
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lottie"
+        <ProgressBar
+            android:id="@+id/circularProgress"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:src="@raw/splash"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:indeterminate="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appName"
-            app:layout_constraintVertical_bias="0"
-            app:lottie_autoPlay="true"
-            app:lottie_rawRes="@raw/splash" />
-
+            android:indeterminateDuration="2"
+            app:layout_constraintTop_toBottomOf="@id/appName" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
