--- a/app/src/main/res/layout/recycle_view_item.xml
+++ b/app/src/main/res/layout/recycle_view_item.xml
@@ -19,8 +19,8 @@
         android:id="@+id/addressTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="Restaurant Address"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView" />
@@ -34,5 +34,6 @@
         android:layout_marginRight="70dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
