--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,8 +26,11 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="4dp"
+                android:scrollbars="vertical"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="0dp"
+                android:background="@android:color/darker_gray"
                 tools:listitem="@layout/recycle_view_item" />
 
             <androidx.constraintlayout.widget.Guideline
