--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/addressTextView"
+                android:id="@+id/restaurantListTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -30,7 +30,7 @@
                 android:scrollbars="vertical"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="0dp"
-                android:background="@android:color/darker_gray"
+                app:layout_constraintTop_toBottomOf="@+id/restaurantListTextView"
                 tools:listitem="@layout/recycle_view_item" />
 
             <androidx.constraintlayout.widget.Guideline
