--- a/app/src/main/res/layout/recycle_view_item.xml
+++ b/app/src/main/res/layout/recycle_view_item.xml
@@ -1,49 +1,50 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="3dp"
-    app:cardUseCompatPadding="true">
+    android:layout_height="150dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginRight="30dp"
+    app:cardCornerRadius="8dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:background="@drawable/comment_bg"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:padding="2dp" />
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imageView"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
             android:text="Title"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:layout_marginLeft="10dp"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/addressTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/imageView"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:text="Description"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:layout_below="@+id/titleTextView"
-            android:textStyle="bold" />
+            android:layout_marginLeft="20dp"
+            android:text="2020-05-02"
+            android:textSize="18sp" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/priceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="100 $"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
