--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colroAccent">#03DAC5</color>
-
+    <color name="buttonColor">#6FC3D4</color>color>
 </resources>
