--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -14,6 +14,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
             android:text="Register"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@id/userNameEditText"
@@ -27,29 +28,14 @@
             android:layout_height="45dp"
             android:layout_marginBottom="32dp"
             android:autofillHints="Username"
-
+            android:layout_marginTop="100dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
             android:drawablePadding="10dp"
             android:hint="Username"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@id/emailEditText"
+            app:layout_constraintBottom_toTopOf="@id/passwordEditText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="LabelFor" />
-
-
-        <EditText
-            android:id="@+id/emailEditText"
-            android:layout_width="220dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="32dp"
-            android:autofillHints="Email"
-            android:drawablePadding="10dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="LabelFor" />
 
 
@@ -62,9 +48,9 @@
             android:drawablePadding="10dp"
             android:hint="Password"
             android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="@id/emailEditText"
-            app:layout_constraintStart_toStartOf="@id/emailEditText"
-            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
+            app:layout_constraintEnd_toEndOf="@id/userNameEditText"
+            app:layout_constraintStart_toStartOf="@id/userNameEditText"
+            app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
             tools:ignore="LabelFor" />
 
         <Button
@@ -74,10 +60,11 @@
             android:background="@drawable/rounded_button"
             android:text="Save"
             app:backgroundTint="@color/buttonColor"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="50dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/passwordEditText" />
+            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
