--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,7 @@
                 android:gravity="center"
                 android:text="List of Restaurants"
                 android:textSize="32sp"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/guideline" />
 
             <androidx.recyclerview.widget.RecyclerView
