google maps api implemented !!!! HURRAY

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@id/addressTextView" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/addToFav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -66,6 +66,19 @@
             app:srcCompat="@drawable/ic_love_normal"
             tools:layout_editor_absoluteX="294dp"
             tools:layout_editor_absoluteY="25dp" />
+
+        <ImageButton
+            android:id="@+id/showOnMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/addToFav"
+            app:srcCompat="@drawable/ic_maps"
+            tools:layout_editor_absoluteX="273dp"
+            tools:layout_editor_absoluteY="398dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
