--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,6 @@
 <layout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:text="Details"
+                    android:text="@string/details"
                     android:textColor="#fff"
                     android:textSize="21sp"
                     android:textStyle="bold" />
@@ -73,7 +72,7 @@
                     android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
 
-                    android:text="Username"
+                    android:text="@string/username"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -104,7 +103,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
-                    android:text="Address"
+                    android:text="@string/address"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -135,7 +134,7 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="20dp"
                     android:paddingLeft="20dp"
-                    android:text="Number"
+                    android:text="@string/number"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -166,7 +165,7 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="32dp"
                     android:paddingLeft="20dp"
-                    android:text="Email"
+                    android:text="@string/email"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -190,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="35dp"
                 android:background="@drawable/buttonstyle"
-                android:text="Log Out"
+                android:text="@string/log_out"
                 android:textColor="#000000" />
 
             <Button
@@ -199,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="35dp"
                 android:background="@drawable/buttonstyle"
-                android:text="Favorites"
+                android:text="@string/favorites"
                 android:textColor="#000000" />
 
         </LinearLayout>
