--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
-            android:text="Register"
+            android:text="@string/register"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@id/userNameEditText"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginBottom="32dp"
             android:autofillHints="Username"
             android:drawablePadding="10dp"
-            android:hint="Username"
+            android:hint="@string/username"
             android:inputType="textPersonName"
             app:layout_constraintTop_toBottomOf="@id/textView"
             tools:ignore="LabelFor" />
@@ -44,7 +44,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
-            android:text="Add a picture:"
+            android:text="@string/add_a_picture"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/userNameEditText" />
 
@@ -79,7 +79,7 @@
             android:layout_marginEnd="32dp"
             android:autofillHints="Password"
             android:drawablePadding="10dp"
-            android:hint="Address"
+            android:hint="@string/address"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="@id/userNameEditText"
             app:layout_constraintStart_toStartOf="@id/userNameEditText"
@@ -94,7 +94,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:drawablePadding="10dp"
-            android:hint="Phone"
+            android:hint="@string/phone"
             android:inputType="phone"
             app:layout_constraintEnd_toEndOf="@id/userNameEditText"
             app:layout_constraintStart_toStartOf="@id/userNameEditText"
@@ -109,7 +109,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:drawablePadding="10dp"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/userNameEditText"
             app:layout_constraintStart_toStartOf="@id/userNameEditText"
@@ -122,7 +122,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="50dp"
             android:background="@drawable/rounded_button"
-            android:text="Save"
+            android:text="@string/save"
             app:backgroundTint="@color/buttonColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
